# lead-hit-python-task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--262845620386752260.wt  collection-2--262845620386752260.wt  collection-7--262845620386752260.wt  forms.json  index-1--262845620386752260.wt  index-3--262845620386752260.wt  index-8--262845620386752260.wt  index-9--262845620386752260.wt  sizeStorer.wt
data/.mongodb/mongosh/: 655bbce45cec87a84e7359d2_log  655bbce76adf7e4edc2d12b1_log  am-655bbce45cec87a84e7359d1.json  config
data/diagnostic.data/: metrics.2023-11-20T20-09-06Z-00000  metrics.2023-11-20T20-09-28Z-00000  metrics.2023-11-20T20-12-36Z-00000  metrics.2023-11-20T20-17-56Z-00000  metrics.2023-11-20T20-30-56Z-00000  metrics.2023-11-20T20-33-56Z-00000  metrics.2023-11-20T20-35-51Z-00000  metrics.2023-11-20T20-36-59Z-00000  metrics.2023-11-20T20-43-33Z-00000  metrics.interim
docker/: docker-compose.yaml
scripts/: start_compose.sh
src/: __main__.py  config.py  database.py  errors.py  main.py  service.py
src/cli/: __init__.py
src/cli/commands/: reset_db_command.py  start_server_command.py
src/models/: __init__.py
src/routers/: internal.py  v0.py
src/templates/: index.html
